# spikeout

./: .gitignore  README.md  pyproject.toml
examples/: alt.py
src/spikeout/: __init__.py  catalogue.py  detect.py  geometry.py  lengths.py  plotting.py  preprocess.py  refine.py  regions.py  stars.py  stats.py
tests/: conftest.py  test_angle_recovery.py  test_catalogue.py  test_detect.py  test_geometry.py  test_halo_mask.py  test_lengths.py  test_plotting.py  test_preprocess.py  test_regions.py  test_stats.py
